Fix menus wrapping after click

--- a/media/css/firefox/partners/desktop.less
+++ b/media/css/firefox/partners/desktop.less
@@ -72,7 +72,7 @@
                 float: left;
                 position: relative;
                 height: 40px;
-                max-width: 150px;
+                width: 150px;
                 color: @textColorSecondary;
                 background: rgba(166,189,206,0.2);
                 border: 1px solid rgba(173,201,222,0.4);
@@ -327,6 +327,7 @@
     .article-header {
         h2 {
             padding-top: 15px;
+            margin-right: 5px;
         }
     }
     .intro {
